// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows styling 1`] = `
<Image
  aspectRatio={1}
  onLoad={[Function]}
  source={
    Object {
      "uri": "http://example.com/image.jpg",
    }
  }
  style={
    Object {
      "width": 100,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "width": 100,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            "#f9f9f9",
            "#ededed",
          ]
        }
        end={
          Object {
            "x": -0.09302964577578221,
            "y": 0.11488204504197774,
          }
        }
        locations={
          Array [
            0,
            1,
          ]
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</Image>
`;

exports[`prepends https schema 1`] = `
<Image
  aspectRatio={1}
  onLoad={[Function]}
  source={
    Object {
      "uri": "https://example.com/image.jpg",
    }
  }
  style={undefined}
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        null,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            "#f9f9f9",
            "#ededed",
          ]
        }
        end={
          Object {
            "x": -0.09302964577578221,
            "y": 0.11488204504197774,
          }
        }
        locations={
          Array [
            0,
            1,
          ]
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</Image>
`;

exports[`renders correctly 1`] = `
<Image
  aspectRatio={1}
  onLoad={[Function]}
  source={
    Object {
      "uri": "http://example.com/image.jpg",
    }
  }
  style={undefined}
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        null,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <BVLinearGradient
        colors={
          Array [
            "#f9f9f9",
            "#ededed",
          ]
        }
        end={
          Object {
            "x": -0.09302964577578221,
            "y": 0.11488204504197774,
          }
        }
        locations={
          Array [
            0,
            1,
          ]
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</Image>
`;
